--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
         </div>
         <div class="subtitle">
-            <h4>Home</h4>
-            <h4>Products</h4>
-            <h4>Sing up</h4>
-            <h4>Log in</h4>
-            <i class="fas fa-search"></i>
-            <i class="fas fa-cart-arrow-down"></i>
+            <uli><a href="#home">Home</a></uli>
+            <uli><a href="#Products">Products</a></uli>
+            <uli><a href="#Sing up">Sing up</a></uli>
+            <uli><a href="#Log in">Log in</a></uli>
+            <uli><a href="#home">Home</a></uli>
+            <uli><a href="#home">Home</a></uli>
+            <uli><i class="fas fa-search"></i></uli>
+            <uli><i class="fas fa-cart-arrow-down"></i></uli>
         </div>
     </div>
     <section class="heading">
